# CaesarEngine

./: .gitattributes  CMakeLists.txt  README.md  compile.sh
.github/workflows/: cmake-multi-platform.yml
libs/glad/include/glad/: glad.h
libs/glad/src/: glad.c
res/: cities.txt  provinces.txt  states.txt  text.csv
res/shaders/: default.frag  default.vert  line.frag  line.vert  text.frag  text.vert
src/: CMakeLists.txt  main.cpp  utils.cpp  utils.hpp
src/city/: city.hpp
src/error_handler/: error_handler.h
src/line/: line.cpp  line.h
src/mesh/: mesh.cpp  mesh.hpp
src/province/: province.cpp  province.hpp
src/province_manager/: province_manager.cpp  province_manager.hpp
src/shader/: shader.hpp
src/state/: state.hpp
src/state_manager/: state_manager.cpp  state_manager.hpp
src/text/: text.cpp  text.hpp
src/ticker/: ticker.h
src/window/: window.cpp  window.hpp
